--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     /> -->
 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
-   
+
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -57,6 +57,12 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
